# ai-agents

./: pyproject.toml
.claude-plugin/: marketplace.json
.claude/hooks/: adr_change_detection.py
.claude/hooks/PostToolUse/: codeql_quick_scan.py  markdown_auto_lint.py
.claude/hooks/PreToolUse/: branch_protection_guard.py
.claude/hooks/SessionStart/: session_initialization_enforcer.py
.claude/hooks/Stop/: session_validator.py
.claude/hooks/SubagentStop/: qa_agent_validator.py
.claude/hooks/UserPromptSubmit/: autonomous_execution_detector.py
.claude/skills/adr-review/scripts/: detect_adr_changes.py
.claude/skills/github/lib/github_core/: api.py
.claude/skills/memory/scripts/: extract_session_episode.py
.githooks/: pre-commit  pre-push
.github/actions/agent-review/: action.yml
.github/actions/ai-review/: action.yml
.github/actions/setup-code-env/: action.yml
.github/workflows/: agent-metrics.yml  ai-issue-triage.yml  ai-metrics-analysis.yml  ai-pr-quality-gate.yml  ai-session-protocol.yml  ai-spec-validation.yml  artifact-insight-scanner.yml  audit-hook-bypass.yml  citation-verify.yml  claude.yml  codeql-analysis.yml  copilot-context-synthesis.yml  copilot-setup-steps.yml  drift-detection.yml  homework-scanner.yml  label-issues.yml  memory-health.yml  memory-validation.yml  milestone-tracking.yml  pr-maintenance.yml  pr-validation.yml  pytest.yml  rjmurillo-bot.yml  skill-passive-compliance.yml  slash-command-quality.yml  synthesis-panel-gate.yml  test-codeql-integration.yml  update-reviewer-stats.yml  validate-generated-agents.yml  validate-handoff-readonly.yml  validate-paths.yml  validate-planning-artifacts.yml  velocity-accelerator.yml  workflow-coalescing-metrics.yml  yaml-lint.yml
docs/: technical-guardrails.md
scripts/: bootstrap-vm.sh  validate_memory_tier.py
tests/: test_detect_skill_violation.py  test_validate_memory_tier.py
