[project]
name = "ai-agents"
version = "0.1.0"
description = "AI agent orchestration framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "anthropic==0.77.0",
    "python-frontmatter==1.1.0",
    "PyYAML==6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "bandit>=1.7.0",
    "pip-audit>=2.6.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".", ".claude/skills/memory-enhancement/src"]
include = ["scripts*", "scripts.memory_sync*", "memory_enhancement*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "security: Security-focused tests",
]

[tool.coverage.run]
source = [".claude", "scripts", "scripts/memory_sync", ".claude/skills/memory-enhancement/src/memory_enhancement"]
omit = ["**/tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.bandit]
exclude_dirs = [".venv", "tests", ".git"]
skips = []

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# sys.path manipulation required before imports for plugin-context path resolution
".claude/skills/github/scripts/**/*.py" = ["E402"]
# Test files use sys.path.insert() before importing modules under test
"tests/hooks/**/*.py" = ["E402"]
"tests/skills/**/*.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
